tests/NormalTests/paczka1/small_fuzzy/65459507.err
Error in line 3: o2Gitmzu7u S200 75,5
Error in line 11: MfAwMoc A572 91,7
Error in line 13: MfAwMoc S200 10,8
